# europe-geo

./: .gitignore  docker-compose.yml
backend/: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0203312d5a32_create_country_table.py  5677468c72d8_create_country_table.py  da2ad8ea7573_create_country_table.py
backend/app/: load_data.py  main.py  schemas.py
backend/app/core/: config.py
backend/app/crud/: base.py  crud_country.py
backend/app/db/: base.py
backend/app/models/: country.py
backend/app/schemas/: country.py
backend/data_module/: main.py
frontend/webapp/: index.html  package.json  tailwind.config.cjs
frontend/webapp/src/: App.tsx  services.ts  types.ts
scrapper/scrapper/: items.py  pipelines.py  settings.py
scrapper/scrapper/data/: albania.json  andorra.json  armenia.json  austria.json  belarus.json  belgium.json  bosnia_and_herzegovina.json  bulgaria.json  croatia.json  cyprus.json  czechia.json  denmark.json  estonia.json  finland.json  france.json  georgia.json  germany.json  greece.json  hungary.json  iceland.json  ireland.json  italy.json  kosovo.json  latvia.json  liechtenstein.json  lithuania.json  luxembourg.json  malta.json  moldova.json  monaco.json  montenegro.json  netherlands.json  norway.json  poland.json  portugal.json  romania.json  russia.json  san_marino.json  serbia.json  slovakia.json  (+6 more)
scrapper/scrapper/spiders/: country_spider.py  flag_spider.py
