[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend provides REST API"
authors = ["Erik Dao <erik.dao@silo.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
fastapi = "^0.89.0"
pydantic = "^1.10.4"
alembic = "^1.9.1"
sqlalchemy = "^1.4.46"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
flake8 = "^6.0.0"
pytest = "^7.2.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
